# nimbus

./: .gitignore  Cargo.toml  README.md  mount-main.sh  mount-second.sh  mount.sh  shell.nix
config/: main.toml  second.toml
src/: config.rs  convert.rs  file_handler.rs  files.rs  fuse.rs  index.rs  lib.rs  macros.rs  main.rs  server.rs
tests/: mount.rs  tester.rs
