[package]
name = "nimbus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuser = "0.12.0"
env_logger = "0.10.0"
structopt = "0.3.26"
log = "0.4.17"
chrono = "0.4.23"
nix = "0.26.1"
libc = "0.2.139"
ctrlc = "3.2.4"
rustc-hash = "1.1.0"
toml = "0.5.10"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
procfs = "0.14.2"

[dev-dependencies]
tempfile = "3.3.0"

[build-dependencies]
pkg-config = "0.3.26"

[profile.release]
codegen-units = 1
lto = true
# panic = "abort"
